# MoodyAPI

./: .gitignore  .gitmodules  CameraAPI.proto  MoodyAPI.proto  MoodyApi.proto  README.md  build-all.sh  example.config.ini  go.mod  go.sum  main.go  renovate.json  schema.sql  update-deps.sh
.github/: dependabot.yml
.github/workflows/: build-agent.yml  build-apk.yml  build-client.yml  build-notifier-pi.yml  build-notifier.yml  build-piscreen.yml  build-server.yml  build-webpanel.yml  codeql-analysis.yml  go.yml  lint-webpanel.yml  update-deps.yml
APIServer/: example.config.ini  generate.go  go.mod  go.sum  main.go
APIServer/api/: api.go
APIServer/broadcaster/: broadcaster.go
APIServer/camapi/: camapi.go
APIServer/command/ddns/: ddns.go
APIServer/common/: common.go
Agent/: Cargo.toml  build.rs
Agent/src/: camera_api.rs  command_listener.rs  common.rs  main.rs
ApiClient/: Cargo.toml  build.rs
ApiClient/src/: main.rs
ApiClient/src/models/: mod.rs
CamAgent/: build.rs
CamAgent/src/: main.rs
CameraAgent/: Cargo.toml  build.rs  build.sh
CameraAgent/src/: camera_api.rs  command_listener.rs  main.rs
Client/: .gitignore  CMakeLists.txt  CMakePresets.json  IPC.rep  cleanup-assets.fish  update-deps.sh
Client/android/: AndroidManifest.xml  build.gradle  google-services.json
Client/android/gradle/wrapper/: gradle-wrapper.properties
Client/android/src/client/api/mooody/me/: AndroidUtils.java  QtAndroidService.java  QtBootServiceBroadcastReceiver.java
Client/qml/: GradientButton.qml  SettingsPanel.qml  Styles.qml  SvgButton.qml  main.qml
Client/src/: AppCore.cpp  AppCore.hpp  AppSettings.cpp  AppSettings.hpp  JNICall.cpp  JNICall.hpp  ServerConnection.cpp  ServerConnection.hpp  main.cpp
LightControl/: Cargo.toml  output.json  update-deps.sh
LightControl/src/: main.rs
LightControl/src/fastcon/: broadcast_parser.rs  command_wrapper.rs  common.rs  device_type.rs  mod.rs
LightControl/src/fastcon/core/: mod.rs  protocol.rs  utils.rs
LightControl/src/fastcon/light/: light_impl.rs  mod.rs
LightControl/src/models/: mod.rs
Notifier/: Cargo.toml  build.rs
Notifier/src/: main.rs
Notifier/src/models/: mod.rs
NotifyClient/: Cargo.toml
NotifyClient/src/: main.rs
PiScreen/: .gitignore  BitBang_I2C.cpp  BitBang_I2C.h  CMakeLists.txt  I2CDevice.cpp  I2CDevice.h  I2CDevice.hpp  SH1106dev.cpp  SH1106dev.hpp  SSOLED.cpp  SSOLED.hpp  build.sh  main.cpp  sample.cpp  speed_test.cpp  ss_oled.cpp  ss_oled.h
PiScreen/common/: I2CDevice.cpp  I2CDevice.hpp  IPiScreenDevice.hpp  common.hpp
PiScreen/config/: Config.cpp  Config.hpp
PiScreen/datasource/: IDataSource.hpp  datasource.hpp
PiScreen/datasource/cpu/: source.cpp  source.hpp
PiScreen/datasource/datetime/: source.cpp  source.hpp
PiScreen/datasource/ip/: source.cpp  source.hpp
PiScreen/datasource/mem/: source.cpp  source.hpp
PiScreen/datasource/service/: source.cpp  source.hpp
PiScreen/device/: Dummy.cpp  Dummy.hpp  IPiScreenDevice.hpp  SH1106.cpp  SH1106.hpp  device.hpp
PiScreen/renderer/: Renderer.cpp  Renderer.hpp
QmlApp/: CMakeLists.txt
QmlApp/android/: AndroidManifest.xml
QmlApp/assets/: LICENSE  MoodyApi.proto
QmlApp/qml/: GradientButton.qml  SettingsPanel.qml  Styles.qml  SvgButton.qml  main.qml
QmlApp/src/: ApiProtocol.cpp  ApiProtocol.hpp  AppCore.cpp  AppCore.hpp  AppSettings.hpp  ServerConnection.cpp  ServerConnection.hpp  main.cpp
Server/: .gitignore  example.config.ini  generate.go  go.mod  go.sum  main.go  update-deps.sh
Server/api/: api.go  camera.go  camera_api.go  dns.go  keepalive.go  light.go  notification_api.go  notification_channels.go  notifications.go  privileged.go  privileged_clients_api.go  vib.go  wg.go
Server/broadcaster/: broadcaster.go
Server/camapi/: camapi.go
Server/command/ddns/: ddns.go
Server/command/ping/: ping.go
Server/common/: common.go  logging.go
Server/db/: db.go  db_base.go  db_clients.go  db_dns.go  db_notification_channels.go  db_notifications.go
Server/dns_server/: dns_server.go
Server/messaging/: messaging.go  messaging_actions.go
WebPanel/: .eslintrc.json  .gitignore  next.config.js  package.json  tsconfig.json  update-deps.sh
WebPanel/common/: index.ts
WebPanel/components/: AlertDialog.tsx  AppFrame.tsx  ClientsTable.tsx  LoadingScreen.tsx  demo.ts  index.ts
WebPanel/components/atoms/: AlertDialogAtom.ts
WebPanel/pages/: _app.tsx  index.tsx
WebPanel/pages/api/: clients.ts  light.ts
WebPanel/pages/api/auth/: [...nextauth].ts
WebPanel/pages/clients/: index.tsx
WebPanel/pages/dns/: index.tsx
WebPanel/pages/light/: index.tsx
WebPanel/pages/notifications/: index.tsx
WebPanel/pages/settings/: index.tsx
WebPanel/pages/status/: index.tsx
WebPanel/pages/user/: login.tsx
WebPanel/pages/wg/: index.tsx
WebPanel/styles/: Home.module.css
WgConfigGenerator/: .gitignore  main.py  requirements.txt  update-deps.sh
WgConfigGenerator/generator/: __init__.py
WgConfigGenerator/networks/: network.schema.json  node.schema.json
WgConfigGenerator/networks/demo_network/: _network_.json  client_1.json  client_2.json  server.json
WgConfigGenerator/utils/: printer.py
assets/: PiLEDMonitor.fish  moodyapi-agent.service  moodyapi-notifier-user.service  moodyapi-piscreen.service  moodyapi-server.service  moodyapi-webpanel.service  sudoers.d-agent  sudoers.d-server
command/camera/: camera.go
proto/: MoodyAPI.proto
proto/common/: common.proto
proto/dns/: dns.proto
proto/light/: light.proto
proto/notifications/: notifications.proto
proto/privileged/: privileged.proto
proto/wg/: wg.proto
