[package]
authors = ["Moody <mooodyhunter@outlook.com>"]
edition = "2021"
name = "cam_agent"
version = "0.1.0"

[dependencies]
once_cell = "1.17.0"
prost = "0.11.5"
prost-types = "0.11.5"
rust-ini = "0.18.0"
tokio = {version = "1.23.1", features = ["rt-multi-thread", "macros"]}
tonic = {version = "0.8.3", features = ["transport", "tls", "tls-roots" ]}

[build-dependencies]
protoc-rust-grpc = "0.8.3"
tonic-build = {version = "0.8.4" }

[[bin]]
name = "cam_agent"
path = "src/main.rs"
