[package]
edition = "2021"
name = "light_controller"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = {version = "0.10", features = ["serde"]}
chrono = "0.4.23"
platform-dirs = "0.3.0"
prost = "0.11.3"
prost-types = "0.11.2"
rand = "0.8.5"
rust-ini = "0.18.0"
tokio = {version = "1.22.0", features = ["rt-multi-thread"]}
tonic = {version = "0.8.3", features = ["transport", "tls", "tls-roots"]}
uuid = "1.2.2"

[build-dependencies]
protoc-rust-grpc = "0.8.3"
tonic-build = {version = "0.8.4"}
