[package]
edition = "2021"
name = "light_controller"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bluer = {version = "0.15.7", features = ["bluetoothd"]}
chrono = "0.4.23"
futures = "0.3.18"
num-derive = "0.3"
num-traits = "0.2"
platform-dirs = "0.3.0"
prost = "0.11.8"
prost-types = "0.11.8"
rand = "0.8.5"
rust-ini = "0.18.0"
tokio = {version = "1.26.0", features = ["rt-multi-thread"]}
tonic = {version = "0.9.0", features = ["transport", "tls", "tls-roots"]}
uuid = "1.3.1"

[build-dependencies]
protoc-rust-grpc = "0.8.3"
tonic-build = {version = "0.9.0"}
