[package]
edition = "2021"
name = "light_controller"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bluer = {version = "0.17.1", features = ["bluetoothd"]}
chrono = "0.4.24"
futures = "0.3.28"
num-derive = "0.4.2"
num-traits = "0.2"
paho-mqtt = "0.12"
rand = "0.8.5"
serde = "1.0"
serde_json = "1.0"
tokio = {version = "1.27.0", features = ["rt-multi-thread"]}
uuid = "1.3.1"
