[package]
authors = ["Moodyhunter <moodyhunter@outlook.com>"]
edition = "2021"
name = "notify_client"
version = "0.1.0"

[dependencies]
chrono = "0.4.23"
notify-rust = "4"
platform-dirs = "0.3.0"
prost = "0.11.8"
prost-types = "0.11.8"
rust-ini = "0.18.0"
tokio = {version = "1.25.0", features = ["rt-multi-thread"]}
tonic = {version = "0.8.3", features = ["transport", "tls", "tls-roots"]}

[build-dependencies]
protoc-rust-grpc = "0.8.3"
tonic-build = {version = "0.8.4" }
